crates/test-ui/ui/msg_send_alloc_init_different.stderr
error[E0271]: type mismatch resolving `<Retained<AnyObject> as MaybeUnwrap>::Input == Option<Retained<NSObject>>`
 --> ui/msg_send_alloc_init_different.rs
  |
  |     let _: Retained<AnyObject> = unsafe { msg_send_id![obj, init] };
  |                                           ^^^^^^^^^^^^^^^^^^^^^^^ expected `Option<Retained<NSObject>>`, found `Option<Retained<AnyObject>>`
  |
  = note: expected enum `Option<Retained<NSObject>>`
             found enum `Option<Retained<AnyObject>>`
note: required by a bound in `send_message_id`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_retained.rs
  |
  |     unsafe fn send_message_id<A: ConvertArguments, R: MaybeUnwrap<Input = U>>(
  |                                                                   ^^^^^^^^^ required by this bound in `MsgSendId::send_message_id`
  = note: this error originates in the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
